fix(storefront): BCTHEME-465 Payment methods are not centered in the Cart page and Cart preview form

--- a/assets/scss/components/stencil/cart/_cart.scss
+++ b/assets/scss/components/stencil/cart/_cart.scss
@@ -20,6 +20,8 @@ $cart-thumbnail-paddingVertical:        0.5rem;
 $cart-item-label-offset:                $cart-thumbnail-maxWidth + $cart-item-spacing;
 $card-preview-zoom-bottom-offset:       6rem;
 
+$previewCart-additionalCheckoutButtons-maxWidth: 274px;
+
 //
 // Shared styles for additional checkout buttons
 // -----------------------------------------------------------------------------
@@ -41,6 +43,7 @@ $card-preview-zoom-bottom-offset:       6rem;
 
         div {
             float: right;
+            z-index: $zIndex-lowest;
         }
     }
 }
@@ -541,12 +544,38 @@ $card-preview-zoom-bottom-offset:       6rem;
 
 .cart-additionalCheckoutButtons {
     @extend %additionalCheckoutButtons;
+    
+    @media (max-width: $screen-small) {
+        display: flex;
+        flex-direction: column;
+
+        >div {
+            width: 100%;
+
+            >p {
+                text-align: center !important;
+            }
+        }
+    }
 }
 
 .previewCart-additionalCheckoutButtons {
-    @extend %additionalCheckoutButtons;
-    padding-right: spacing('single');
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding-bottom: spacing('single');
+
+    p {
+        text-align: center;
+    }
+
+    @media (max-width: $screen-small) {
+        >div {
+            width: 100%;
+            max-width: $previewCart-additionalCheckoutButtons-maxWidth;
+        }
+    }
 }
 
 // Cart Preview
